--- a/main.ipynb
+++ b/main.ipynb
@@ -1572,6 +1572,140 @@
     "plt.title(\"Correlation Matrix (Upper Triangle)\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Подбор параметров модели регрессии"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Backward Elimination"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Backward Elimination - начинается с модели, содержащей все переменные, и поочередно удаляются переменные, оценивая, как это влияет на метрику (например,  $R^2$  или Adjusted  $R^2$ )."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from mlxtend.feature_selection import SequentialFeatureSelector as SFS\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Загрузка данных\n",
+    "df = pd.read_csv(\"http://d396qusza40orc.cloudfront.net/statistics/lec_resources/states.csv\")\n",
+    "\n",
+    "# Зависимая переменная\n",
+    "y = df['poverty']\n",
+    "\n",
+    "# Независимые переменные\n",
+    "X = df[['metro_res', 'white', 'hs_grad', 'female_house']]\n",
+    "\n",
+    "# Модель регрессии\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Sequential Feature Selection (шаг назад, без кросс-валидации)\n",
+    "sfs = SFS(model, \n",
+    "          k_features=\"best\", \n",
+    "          forward=False,  # Backward elimination\n",
+    "          floating=False,  # Без \"плавающего\" отбора\n",
+    "          scoring=\"r2\",  # Используем метрику R^2\n",
+    "          cv=0)  # Без кросс-валидации для простоты\n",
+    "\n",
+    "# Подбор переменных\n",
+    "sfs.fit(X.values, y.values)\n",
+    "\n",
+    "print(\"Лучшие переменные:\", sfs.k_feature_names_)\n",
+    "\n",
+    "# Промежуточные результаты\n",
+    "results = pd.DataFrame.from_dict(sfs.subsets_, orient=\"index\")\n",
+    "results[\"Adj R^2\"] = results[\"avg_score\"]  # Если используется R^2, он близок к Adjusted R^2\n",
+    "print(\"Промежуточные результаты:\\n\", results)\n",
+    "\n",
+    "# Почему переменные лучшие:\n",
+    "print(\"\\nПодробности лучшей модели:\")\n",
+    "for i, (subset, metrics) in enumerate(sfs.subsets_.items(), start=1):\n",
+    "    print(f\"Шаг {i}: Выбраны переменные {metrics['feature_names']}\")\n",
+    "    print(f\"R^2: {metrics['avg_score']:.4f}, Количество переменных: {len(metrics['feature_idx'])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Полный перебор всех комбинаций (Exhaustive Search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "import statsmodels.api as sm\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Загрузка данных\n",
+    "df = pd.read_csv(\"http://d396qusza40orc.cloudfront.net/statistics/lec_resources/states.csv\")\n",
+    "\n",
+    "# Зависимая переменная\n",
+    "y = df['poverty']\n",
+    "\n",
+    "# Независимые переменные\n",
+    "X = df[['metro_res', 'white', 'hs_grad', 'female_house']]\n",
+    "\n",
+    "def exhaustive_search(X, y):\n",
+    "    \"\"\"\n",
+    "    Перебор всех комбинаций переменных для поиска лучшей модели по Adjusted R^2.\n",
+    "\n",
+    "    Параметры:\n",
+    "    X - DataFrame с независимыми переменными.\n",
+    "    y - Series с зависимой переменной.\n",
+    "\n",
+    "    Возвращает:\n",
+    "    - Лучшая модель.\n",
+    "    - Переменные, оставшиеся в модели.\n",
+    "    \"\"\"\n",
+    "    best_adj_r2 = -1\n",
+    "    best_vars = None\n",
+    "    best_model = None\n",
+    "\n",
+    "    # Перебор всех возможных размеров подмножеств\n",
+    "    for k in range(1, len(X.columns) + 1):\n",
+    "        for combo in combinations(X.columns, k):\n",
+    "            X_subset = X[list(combo)]\n",
+    "            X_subset = sm.add_constant(X_subset)  # Добавляем константу\n",
+    "            model = sm.OLS(y, X_subset).fit()\n",
+    "            adj_r2 = model.rsquared_adj\n",
+    "            \n",
+    "            if adj_r2 > best_adj_r2:\n",
+    "                best_adj_r2 = adj_r2\n",
+    "                best_vars = combo\n",
+    "                best_model = model\n",
+    "\n",
+    "    return best_model, best_vars, best_adj_r2\n",
+    "\n",
+    "# Пример использования\n",
+    "# Замените X и y своими данными\n",
+    "best_model, best_vars, best_adj_r2 = exhaustive_search(X, y)\n",
+    "\n",
+    "print(\"Лучшие переменные:\", best_vars)\n",
+    "print(\"Adjusted R^2:\", best_adj_r2)\n",
+    "print(best_model.summary())"
+   ]
   }
  ],
  "metadata": {
