Заменил пути на относительные + Датасет по кредитным картам

--- a/Sorta_GLM.ipynb
+++ b/Sorta_GLM.ipynb
@@ -611,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wines = pd.read_csv('D:/Stepik/winequality-red.csv', sep = ';')"
+    "wines = pd.read_csv('winequality-red.csv', sep = ';')"
    ]
   },
   {
@@ -948,7 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "credit = pd.read_csv('D:/Stepik/credit_card.csv')"
+    "credit = pd.read_csv('credit_card.csv')"
    ]
   },
   {
